           had previously been defined.
       12. Included and forwarded servlets now inherit parameters from their calling servlet.
       13. Included servlets now have access to their path information as attributes, as per the spec.
       14. Forwarded servlets now have access to their path information from the standard request methods, as required.

Additions:
    Content and Parsing
        1. You may call HTMLParserFactory.setPreserveTagCase and setReturnHTMLDocument to control whether the parser coerces
           the case of tags and attributes or returns a HTMLDocument object, respectively.
        2. HTMLParserFactory now supports methods to explicitly select the parser without playing with the class path.
           This includes support for additional parsers not bundled with HttpUnit.
        3. WebResponse and TableCell now support the getElementWithID method, which returns any supported HTMLElement,
           given its ID. Supported HTMLElement objects include WebForm, WebLink, WebTable, WebImage, WebApplet,
           FormControl, TableCell, and TableRow.
        4. Added getFragmentIdentifier() to WebRequestSource (parent of WebLink, WebForm, and WebImage)
        5. Added support for <iframe> tag. IFrames work just like regular frames, except that they are embedded in a response
           without a <frameset> tag. IFrame support is controlled by the ClientProperties.iframeSupported property.
        6. WebForm.isHiddenParameter returns true if all parameters with the specified name are hidden
    JavaScript
        7. The Form.target property is now supported
        8. Added support for document.getElementById
        9. All HTML elements with id attributes are now accessible
    ServletUnit
       10. ServletRunner.shutDown() will invoke the destroy() methods of any servlets which have been invoked
           through that servlet runner.
       11. ServletUnit now supports HttpServletRequest.getHeaderNames