@@ -48,6 +48,8 @@ Problems Fixed:
        12. Included and forwarded servlets now inherit parameters from their calling servlet.
        13. Included servlets now have access to their path information as attributes, as per the spec.
        14. Forwarded servlets now have access to their path information from the standard request methods, as required.
+       15. All servlets within a web application now share the same instance of ServletContext, permitting attributes
+           set by one servlet to be visible to other servlets.
 
 Additions:
     Content and Parsing
@@ -75,6 +77,7 @@ Additions:
        14. InvocationContext now supports include and forwarded servlets: calling pushIncludeRequest or pushForwardRequest
            updates the servlet, request, and response properties of the context so that subsequent calls can be done from
            the dispatched servlet. Calling popRequest reverts to the dispatching servlet.
+       15. ServletUnit now loads and initializes servlets specified with the <load-on-startup> element.
 
 Notes:
     1. Upgraded NekoHTML to 0.7.2 which no longer generates superfluous <form> tags.
